Bug 500216 - "Reply to OP on collapsed thread opens a reply for every message in the thread" [r=sid0,sr=Standard8]